--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
   display: block;
   box-sizing: border-box;
   position: relative;
-  /* background-image: url(assets/trainees/leegaeun.jpg);
+  /* background-image: url(assets/trainees/AGUANG.png);
   background-size: 60px; */
 }
 .table__entry-img {
