--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
   display: block;
   box-sizing: border-box;
   position: relative;
-  /* background-image: url(assets/trainees/ALTON ANG.png);
+  /* background-image: url(assets/trainees/ALTONANG.png);
   background-size: 60px; */
 }
 .table__entry-img {
@@ -261,11 +261,12 @@ body {
   font-size: 12px;
   color: var(--name-gray);
 }
-.table__entry .hangul {
-  font-size: 12px;
+.table__entry .native {
+  font-size: 11px;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--other-name-gray);
 }
-.table__entry .companyandyear {
+.table__entry .nationalityandyear {
   font-size: 10px;
   color: var(--affil-gray);
   display: block;
